--- a/tests/integration/targets/podman_container_info/tasks/main.yml
+++ b/tests/integration/targets/podman_container_info/tasks/main.yml
@@ -13,7 +13,7 @@
       ignore_errors: true
 
     - name: Get missing container info
-      podman_container_info:
+      containers.podman.podman_container_info:
         name: "{{ container_name }}"
       register: nonexist
 
@@ -25,7 +25,7 @@
           - nonexist.containers == []
 
     - name: Get missing multiple container info
-      podman_container_info:
+      containers.podman.podman_container_info:
         name:
           - "{{ container_name }}"
           - neverexist
@@ -44,19 +44,19 @@
       command: podman container run -d --name {{ container_name }} alpine sleep 15m
 
     - name: Get existing container info
-      podman_container_info:
+      containers.podman.podman_container_info:
         name: "{{ container_name }}"
       register: existing_container
 
     - name: Get mixed existing and non-existing container info
-      podman_container_info:
+      containers.podman.podman_container_info:
         name:
           - "{{ container_name }}"
           - whatever
       register: mixed_existing_container
 
     - name: Get all containers info
-      podman_container_info:
+      containers.podman.podman_container_info:
       register: all_containers
 
     - name: Dump podman container inspect result
