--- a/ci/playbooks/connection_test.yml
+++ b/ci/playbooks/connection_test.yml
@@ -6,12 +6,22 @@
     distro: "{{ ansible_distribution }}{{ ansible_distribution_major_version }}"
   tasks:
 
-    - name: Run test script
+    - name: Run test script for podman
       become: "{{ distro == 'CentOS7' }}"
       shell: >-
         {% if ansible_venv is defined %}source {{ ansible_venv }}/bin/activate; {% endif %}
 
         {{ repo_dir }}/ci/run_connection_test.sh
+      args:
+        chdir: "{{ repo_dir }}"
+        executable: /bin/bash
+
+    - name: Run test script for buildah
+      become: "{{ distro == 'CentOS7' }}"
+      shell: >-
+        {% if ansible_venv is defined %}source {{ ansible_venv }}/bin/activate; {% endif %}
+
+        {{ repo_dir }}/ci/run_connection_test.sh buildah
       args:
         chdir: "{{ repo_dir }}"
         executable: /bin/bash
