--- a/.github/workflows/podman_network_info.yml
+++ b/.github/workflows/podman_network_info.yml
@@ -73,7 +73,7 @@ jobs:
           ~/.local/bin/ansible-galaxy collection install -vvv --force /tmp/just_new_collection/*.tar.gz
           sudo ~/.local/bin/ansible-galaxy collection install -vvv --force /tmp/just_new_collection/*.tar.gz
 
-      - name: Run collection tests for connection
+      - name: Run collection tests for podman network info
         run: |
           export PATH=~/.local/bin:$PATH
 
