Relicense under GPLv3 and clean up modules
Clean up modules according to last Ansible changes
Set license for GPLv3 to avoid various possible issues

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,12 +1,12 @@
 namespace: containers
 name: podman
-version: 1.0.1
+version: 9.9.9
 readme: README.md
 authors:
   - Sagi Shnaidman <sshnaidm@redhat.com>
   - Ansible team
 description: Podman container Ansible modules
-license: Apache-2.0
+license: GPL-3.0-or-later
 tags:
   - containers
   - podman
