Add podman pod and pod info modules

--- a/ci/playbooks/pre.yml
+++ b/ci/playbooks/pre.yml
@@ -61,6 +61,7 @@
               - buildah
               - git
               - vim
+              - dnsmasq
 
     - name: Remove virtualenv if need
       file:
