--- a/.github/workflows/collection-continuous-integration.yml
+++ b/.github/workflows/collection-continuous-integration.yml
@@ -13,7 +13,7 @@ jobs:
         runner-os:
           - ubuntu-16.04
         ansible-version:
-          - git+https://github.com/ansible/ansible.git@devel
+          - git+https://github.com/ansible/ansible.git@stable-2.10
         runner-python-version:
           - 3.7
     steps:
@@ -58,6 +58,7 @@ jobs:
           - 3.7
         ansible-version:
           - ansible<2.10
+          - git+https://github.com/ansible/ansible.git@stable-2.10
           - git+https://github.com/ansible/ansible.git@devel
         python-version:
           - 2.7
